--- a/form.html
+++ b/form.html
@@ -95,18 +95,18 @@
               <input class="order-form__text" id="father-name" type="text" name="father-name" placeholder="Отчество, если желаете">
             </p>
           </fieldset>
-          <fieldset class="order-form__section">
-            <legend class="order-form__title">Тел</legend>
+          <p class="order-form__line">
+            <label class="order-form__caption">Тел</label>
             <input class="order-form__text" type="tel" name="phone" placeholder="+7 ХХХ ХХ ХХ*">
-          </fieldset>
-          <fieldset class="order-form__section">
-            <legend class="order-form__title">E-mail</legend>
+          </p>
+          <p class="order-form__line">
+            <label class="order-form__caption">E-mail</label>
             <input class="order-form__text" type="email" name="email" placeholder="Ваш Email*">
-          </fieldset>
-          <fieldset class="order-form__section">
-            <legend class="order-form__title">Доп</legend>
+          </p>
+          <p class="order-form__line">
+            <label class="order-form__caption">Доп</label>
             <textarea name="name" placeholder="Опишите все ваши пожелания к заказу"></textarea>
-          </fieldset>
+          </p>
           <small class="order-form__caption"><sup>*</sup>Поля обязательны для заполнения</small>
           <button class="order-form__submit btn" type="submit">Отправить заказ</button>
         </form>
