--- a/catalog.html
+++ b/catalog.html
@@ -67,7 +67,7 @@
         <section class="catalog-item">
           <a class="catalog-item__img" href="#">
             <img src="http://placehold.it/260x195" alt="Большая корзинка для игрушек" width="260" height="195">
-          </a  >
+          </a>
           <div class="catalog-item__info">
             <a class="catalog-item__title">Большая корзинка для игрушек</a>
             <p class="catalog-item__description">Диаметр 30 см, высота 30 см</p>
@@ -82,7 +82,9 @@
     <section class="production">
       <div class="production__container">
         <h2 class="production__title">Процесс производства</h2>
-        <div class="production__video"></div>
+        <div class="production__video">
+          <button class="production__play-btn" type="button"><!-- --></button>
+        </div>
         <p class="production__description">
           По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.
         </p>
@@ -104,27 +106,25 @@
     </footer>
 
     <div class="modal modal--open">
-      <div class="modal__container">
-        <div class="modal__title">Добавить в корзину</div>
-        <p class="modal__description">Выберите размер:</p>
-        <form class="to-cart" action="#" method="get">
-          <div class="to-cart__sizes">
-            <p class="to-cart__size">
-              <input class="to-cart__radio" id="s-size" type="radio" name="size" value="s" checked>
-              <label class="to-cart__label" for="s-size">S</label>
-            </p>
-            <p class="to-cart__size">
-              <input class="to-cart__radio" id="m-size" type="radio" name="size" value="m">
-              <label class="to-cart__label" for="m-size">M</label>
-            </p>
-            <p class="to-cart__size">
-              <input class="to-cart__radio" id="l-size" type="radio" name="size" value="l">
-              <label class="to-cart__label" for="l-size">L</label>
-            </p>
-          </div>
-          <button class="to-cart__submit btn" type="submit">Добавить</button>
-        </form>
-      </div>
+      <div class="modal__title">Добавить в корзину</div>
+      <p class="modal__description">Выберите размер:</p>
+      <form class="to-cart" action="#" method="get">
+        <div class="to-cart__sizes">
+          <p class="to-cart__size">
+            <input class="to-cart__radio" id="s-size" type="radio" name="size" value="s" checked>
+            <label class="to-cart__label" for="s-size">S</label>
+          </p>
+          <p class="to-cart__size">
+            <input class="to-cart__radio" id="m-size" type="radio" name="size" value="m">
+            <label class="to-cart__label" for="m-size">M</label>
+          </p>
+          <p class="to-cart__size">
+            <input class="to-cart__radio" id="l-size" type="radio" name="size" value="l">
+            <label class="to-cart__label" for="l-size">L</label>
+          </p>
+        </div>
+        <button class="to-cart__submit btn" type="submit">Добавить</button>
+      </form>
     </div>
   </body>
 </html>
