Добавил текстовые стили

--- a/form.html
+++ b/form.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Вязание на заказ</title>
   </head>
@@ -107,9 +106,9 @@
           </p>
           <p class="order-form__line">
             <label class="order-form__caption">Доп</label>
-            <textarea name="name" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+            <textarea class="order-form__text" name="name" placeholder="Опишите все ваши пожелания к заказу"></textarea>
           </p>
-          <small class="order-form__caption"><sup>*</sup>Поля обязательны для заполнения</small>
+          <small class="order-form__note"><sup>*</sup>Поля обязательны для заполнения</small>
           <button class="order-form__submit btn" type="submit">Отправить заказ</button>
         </form>
       </div>
