--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Мишка</title>
   </head>
@@ -49,8 +48,8 @@
     <section class="promo">
       <h1 class="promo__title">Милые штуки ручной работы для дома</h1>
       <div class="promo__categories">
-        <a class="promo__link promo__link--interior">Предметы интерьера</a>
-        <a class="promo__link promo__link--toys">Детские игрушки</a>
+        <a class="promo__link promo__link--interior" href="#">Предметы интерьера</a>
+        <a class="promo__link promo__link--toys" href="#">Детские игрушки</a>
       </div>
     </section>
     <section class="best-seller">
