Добавил контентные изображения

--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
       <div class="main-header__top">
         <div class="main-header__container">
           <a class="logo" href="index.html">
-            <img class="logo__img" src="http://placehold.it/86x35" alt="Мишка" width="86" height="35">
+            <img class="logo__img" src="img/logo-mobile.svg" alt="Мишка" width="86" height="35">
           </a>
           <nav class="main-menu main-menu--closed main-menu--nojs">
             <button class="main-menu__toggle main-menu__toggle--close" type="button">Открыть меню</button>
@@ -41,7 +41,7 @@
       <div class="catalog__container">
         <section class="catalog-item">
           <a class="catalog-item__img" href="#">
-            <img src="http://placehold.it/260x195" alt="Зайчик-попрыгайчик" width="260" height="195">
+            <img src="img/photo-1-mobile@1x.jpg" alt="Зайчик-попрыгайчик" width="260" height="195">
           </a>
           <div class="catalog-item__info">
             <a class="catalog-item__title">Зайчик-попрыгайчик</a>
@@ -54,7 +54,7 @@
         </section>
         <section class="catalog-item">
           <a class="catalog-item__img" href="#">
-            <img src="http://placehold.it/260x195" alt="Корзинка для белья" width="260" height="195">
+            <img src="img/photo-2-mobile@1x.jpg" alt="Корзинка для белья" width="260" height="195">
           </a>
           <div class="catalog-item__info">
             <a class="catalog-item__title">Корзинка для белья</a>
@@ -67,7 +67,7 @@
         </section>
         <section class="catalog-item">
           <a class="catalog-item__img" href="#">
-            <img src="http://placehold.it/260x195" alt="Большая корзинка для игрушек" width="260" height="195">
+            <img src="img/photo-3-mobile@1x.jpg" alt="Большая корзинка для игрушек" width="260" height="195">
           </a>
           <div class="catalog-item__info">
             <a class="catalog-item__title">Большая корзинка для игрушек</a>
