--- a/form.html
+++ b/form.html
@@ -12,7 +12,7 @@
       <div class="main-header__top">
         <div class="main-header__container">
           <a class="logo" href="index.html">
-            <img class="logo__img" src="http://placehold.it/86x35" alt="Мишка" width="86" height="35">
+            <img class="logo__img" src="img/logo-mobile.svg" alt="Мишка" width="86" height="35">
           </a>
           <nav class="main-menu main-menu--closed main-menu--nojs">
             <button class="main-menu__toggle main-menu__toggle--close" type="button">Открыть меню</button>
