--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="main-header__container">
           <!-- Контейнер сцентрует содержимое main-header__top-->
           <a class="logo">
-            <img class="logo__img" src="http://placehold.it/86x35" alt="Мишка" width="86" height="35">
+            <img class="logo__img" src="img/logo-mobile.svg" alt="Мишка" width="86" height="35">
           </a>
           <nav class="main-menu main-menu--closed main-menu--nojs">
             <button class="main-menu__toggle main-menu__toggle--close" type="button">Открыть меню</button>
@@ -46,7 +46,7 @@
       </div>
     </header>
     <section class="promo">
-      <h1 class="promo__title">Милые штуки ручной работы для дома</h1>
+      <h1 class="promo__title">Милые штуки ручной<br> работы для дома</h1>
       <div class="promo__categories">
         <a class="promo__link promo__link--interior" href="#">Предметы интерьера</a>
         <a class="promo__link promo__link--toys" href="#">Детские игрушки</a>
@@ -74,7 +74,7 @@
           </tr>
         </table>
         <div class="best-seller__image">
-          <img src="http://placehold.it/260x315" alt="Вязаные корзинки" width="260" height="315">
+          <img src="img/triple-set-mobile@1x.jpg" alt="Вязаные корзинки" width="260" height="315">
         </div>
         <div class="best-seller__price">Цена: 990руб.</div>
         <a class="best-seller__order btn" href="#">Заказать</a>
