--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
           <nav class="main-menu main-menu--closed main-menu--nojs">
             <button class="main-menu__toggle main-menu__toggle--opened" type="button">Открыть меню</button>
             <div class="main-menu__container">
-              <ul class="main-menu__list">
+              <ul class="main-menu__list main-menu__list--categories">
                 <li class="main-menu__item">
                   <a class="main-menu__link" href="catalog.html">Каталог товаров</a>
                 </li>
                 <li class="main-menu__item">
                   <a class="main-menu__link" href="form.html">Вязание на заказ</a>
                 </li>
+              </ul>
+              <ul class="main-menu__list main-menu__list--controls">
                 <li class="main-menu__item">
                   <a class="main-menu__link main-menu__link--search" href="#">Поиск по сайту</a>
                 </li>
@@ -48,8 +50,8 @@
     <section class="promo">
       <h1 class="promo__title">Милые штуки ручной<br> работы для дома</h1>
       <div class="promo__categories">
-        <a class="promo__link promo__link--interior" href="#">Предметы интерьера</a>
-        <a class="promo__link promo__link--toys" href="#">Детские игрушки</a>
+        <a class="promo__link promo__link--interior" href="#">Предметы<br> интерьера</a>
+        <a class="promo__link promo__link--toys" href="#">Детские<br> игрушки</a>
       </div>
     </section>
     <section class="best-seller">
@@ -114,12 +116,12 @@
       <div class="contacts__container">
         <h2 class="contacts__title">Контакты</h2>
         <div class="contacts__item">
-          <span class="contacts__field">email</span>
+          <span class="contacts__field">email:</span>
           <a class="contacts__text" href="#">info@mimimishkashop.ru</a>
         </div>
         <div class="contacts__item">
-          <span class="contacts__field">адрес</span>
-          <span class="contacts__text">г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</span>
+          <span class="contacts__field">адрес:</span>
+          <span class="contacts__text contacts__text--address">г. Санкт-Петербург, ул. Большая Конюшенная,<br> д. 19/8, офис 101</span>
         </div>
       </div>
       <div class="map"></div>
