--- a/form.html
+++ b/form.html
@@ -17,13 +17,15 @@
           <nav class="main-menu main-menu--closed main-menu--nojs">
             <button class="main-menu__toggle main-menu__toggle--opened" type="button">Открыть меню</button>
             <div class="main-menu__container">
-              <ul class="main-menu__list">
+              <ul class="main-menu__list main-menu__list--categories">
                 <li class="main-menu__item">
                   <a class="main-menu__link" href="catalog.html">Каталог товаров</a>
                 </li>
                 <li class="main-menu__item">
-                  <a class="main-menu__link main-menu__link--active">Вязание на заказ</a>
+                  <a class="main-menu__link" href="form.html">Вязание на заказ</a>
                 </li>
+              </ul>
+              <ul class="main-menu__list main-menu__list--controls">
                 <li class="main-menu__item">
                   <a class="main-menu__link main-menu__link--search" href="#">Поиск по сайту</a>
                 </li>
