--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             <div class="main-menu__container">
               <ul class="main-menu__list main-menu__list--categories">
                 <li class="main-menu__item">
-                  <a class="main-menu__link" href="catalog.html">Каталог товаров</a>
+                  <a class="main-menu__link main-menu__link--catalog" href="catalog.html">Каталог товаров</a>
                 </li>
                 <li class="main-menu__item">
-                  <a class="main-menu__link" href="form.html">Вязание на заказ</a>
+                  <a class="main-menu__link main-menu__link--order" href="form.html">Вязание на заказ</a>
                 </li>
               </ul>
               <ul class="main-menu__list main-menu__list--controls">
