--- a/index.html
+++ b/index.html
@@ -28,20 +28,25 @@
             <div class="main-menu__container">
               <ul class="main-menu__list main-menu__list--categories">
                 <li class="main-menu__item">
-                  <a class="main-menu__link main-menu__link--catalog" href="catalog.html">Каталог товаров</a>
+                  <a class="main-menu__link main-menu__link--catalog" href="catalog.html"><span class="main-menu__align-center">Каталог товаров</span></a>
                 </li>
                 <li class="main-menu__item">
-                  <a class="main-menu__link main-menu__link--order" href="form.html">Вязание на заказ</a>
+                  <a class="main-menu__link main-menu__link--order" href="form.html"><span class="main-menu__align-center">Вязание на заказ</span></a>
                 </li>
               </ul>
               <ul class="main-menu__list main-menu__list--controls">
                 <li class="main-menu__item">
-                  <a class="main-menu__link main-menu__link--search" href="#">Поиск по сайту</a>
+                  <a class="main-menu__link main-menu__link--search" href="#"><span class="main-menu__align-center main-menu__align-center--search">Поиск по сайту</span></a>
                 </li>
                 <li class="main-menu__item">
-                  <a class="main-menu__link main-menu__link--cart" href="#">Корзина: <span>пока пуста</span></a>
+                  <a class="main-menu__link main-menu__link--cart" href="#"><span class="main-menu__align-center main-menu__align-center--cart">Корзина: <span>пока пуста</span></span></a>
                 </li>
               </ul>
+              <ul class="extra-nav">
+                <li class="extra-nav__item"><a class="extra-nav__link" href="#">Новые поступления</a></li>
+                <li class="extra-nav__item"><a class="extra-nav__link" href="#">Распродажа</a></li>
+              </ul>
+              <div class="delivery-info">Бесплатная доставка по России</div>
             </div>
           </nav>
         </div>
@@ -50,8 +55,8 @@
     <section class="promo">
       <h1 class="promo__title">Милые штуки ручной<br> работы для дома</h1>
       <div class="promo__categories">
-        <a class="promo__link promo__link--interior" href="#">Предметы<br> интерьера</a>
-        <a class="promo__link promo__link--toys" href="#">Детские<br> игрушки</a>
+        <a class="promo__link promo__link--interior" href="#"><span class="promo__align-center promo__align-center--interior">Предметы<br> интерьера</span></a>
+        <a class="promo__link promo__link--toys" href="#"><span class="promo__align-center promo__align-center--toys">Детские<br> игрушки</span></a>
       </div>
     </section>
     <section class="best-seller">
