Стилизовал главную страницу

--- a/catalog.html
+++ b/catalog.html
@@ -50,39 +50,45 @@
           <a class="catalog-item__img" href="#">
             <img src="img/photo-1-mobile@1x.jpg" alt="Зайчик-попрыгайчик" width="260" height="195">
           </a>
-          <div class="catalog-item__info">
-            <a class="catalog-item__title">Зайчик-попрыгайчик</a>
-            <p class="catalog-item__description">Рост 30 см, вес 200 г</p>
-          </div>
-          <div class="catalog-item__order">
-            <span class="catalog-item__price">1200 руб.</span>
-            <a class="catalog-item__cart" href="#">В козину</a>
+          <div class="catalog-item__content">
+            <div class="catalog-item__info">
+              <a class="catalog-item__title">Зайчик-попрыгайчик</a>
+              <p class="catalog-item__description">Рост 30 см, вес 200 г</p>
+            </div>
+            <div class="catalog-item__order">
+              <span class="catalog-item__price">1200 руб.</span>
+              <a class="catalog-item__cart" href="#">В козину</a>
+            </div>
           </div>
         </section>
         <section class="catalog-item">
           <a class="catalog-item__img" href="#">
             <img src="img/photo-2-mobile@1x.jpg" alt="Корзинка для белья" width="260" height="195">
           </a>
-          <div class="catalog-item__info">
-            <a class="catalog-item__title">Корзинка для белья</a>
-            <p class="catalog-item__description">Диаметр 15 см, высота 10 см</p>
-          </div>
-          <div class="catalog-item__order">
-            <span class="catalog-item__price">690 руб.</span>
-            <a class="catalog-item__cart" href="#">В козину</a>
+          <div class="catalog-item__content">
+            <div class="catalog-item__info">
+              <a class="catalog-item__title">Корзинка для белья</a>
+              <p class="catalog-item__description">Диаметр 15 см, высота 10 см</p>
+            </div>
+            <div class="catalog-item__order">
+              <span class="catalog-item__price">690 руб.</span>
+              <a class="catalog-item__cart" href="#">В козину</a>
+            </div>
           </div>
         </section>
         <section class="catalog-item">
           <a class="catalog-item__img" href="#">
             <img src="img/photo-3-mobile@1x.jpg" alt="Большая корзинка для игрушек" width="260" height="195">
           </a>
-          <div class="catalog-item__info">
-            <a class="catalog-item__title">Большая корзинка для игрушек</a>
-            <p class="catalog-item__description">Диаметр 30 см, высота 30 см</p>
-          </div>
-          <div class="catalog-item__order">
-            <span class="catalog-item__price">1500 руб.</span>
-            <a class="catalog-item__cart" href="#">В козину</a>
+          <div class="catalog-item__content">
+            <div class="catalog-item__info">
+              <a class="catalog-item__title">Большая корзинка для игрушек</a>
+              <p class="catalog-item__description">Диаметр 30 см, высота 30 см</p>
+            </div>
+            <div class="catalog-item__order">
+              <span class="catalog-item__price">1500 руб.</span>
+              <a class="catalog-item__cart" href="#">В козину</a>
+            </div>
           </div>
         </section>
       </div>
@@ -101,6 +107,9 @@
     </section>
     <footer class="main-footer">
       <div class="main-footer__container">
+        <div class="main-footer__logo">
+          <img src="img/logo-mobile.svg" alt="Мишка" width="86" height="35">
+        </div>
         <div class="social-links">
           <a class="social-link social-link--insta" href="#">Мы в Инстаграмме</a>
           <a class="social-link social-link--fb" href="#">Мы в Фейсбуке</a>
