--- a/form.html
+++ b/form.html
@@ -122,6 +122,9 @@
     </div>
     <footer class="main-footer">
       <div class="main-footer__container">
+        <div class="main-footer__logo">
+          <img src="img/logo-mobile.svg" alt="Мишка" width="86" height="35">
+        </div>
         <div class="social-links">
           <a class="social-link social-link--insta" href="#">Мы в Инстаграмме</a>
           <a class="social-link social-link--fb" href="#">Мы в Фейсбуке</a>
