--- a/index.html
+++ b/index.html
@@ -132,16 +132,21 @@
         </div>
         <div class="contacts__item">
           <span class="contacts__field">адрес:</span>
-          <span class="contacts__text contacts__text--address">г. Санкт-Петербург, ул. Большая Конюшенная,<br> д. 19/8, офис 101</span>
+          <span class="contacts__text contacts__text--address">г. Санкт-Петербург,<br> ул. Большая Конюшенная,<br> д. 19/8, офис 101</span>
         </div>
       </div>
-      <div class="map"></div>
+      <div class="map">
+        <div class="map__inner"></div>
+      </div>
       <div class="contacts__container">
         <a class="contacts__write btn" href="#">Напишите нам</a>
       </div>
     </section>
     <footer class="main-footer">
       <div class="main-footer__container">
+        <div class="main-footer__logo">
+          <img src="img/logo-mobile.svg" alt="Мишка" width="86" height="35">
+        </div>
         <div class="social-links">
           <a class="social-link social-link--insta" href="#">Мы в Инстаграмме</a>
           <a class="social-link social-link--fb" href="#">Мы в Фейсбуке</a>
