Стилизовал страницу каталога

--- a/form.html
+++ b/form.html
@@ -91,15 +91,15 @@
           <fieldset class="order-form__section">
             <legend class="order-form__title">ФИО</legend>
             <p class="order-form__line">
-              <label class="order-form__label" for="f-name">Имя:</label>
+              <label class="order-form__label order-form__label--f-name" for="f-name">Имя:</label>
               <input class="order-form__text" id="f-name" type="text" name="f-name" placeholder="Введите ваше имя*" required>
             </p>
             <p class="order-form__line">
-              <label class="order-form__label" for="s-name">Фамилия:</label>
+              <label class="order-form__label order-form__label--s-name" for="s-name">Фамилия:</label>
               <input class="order-form__text" id="s-name" type="text" name="s-name" placeholder="Укажите фамилию*" required>
             </p>
             <p class="order-form__line">
-              <label class="order-form__label" for="father-name">Отчество:</label>
+              <label class="order-form__label order-form__label--father-name" for="father-name">Отчество:</label>
               <input class="order-form__text" id="father-name" type="text" name="father-name" placeholder="Отчество, если желаете">
             </p>
           </fieldset>
@@ -113,7 +113,7 @@
           </p>
           <p class="order-form__line">
             <label class="order-form__caption">Доп</label>
-            <textarea class="order-form__text" name="name" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+            <textarea class="order-form__text order-form__text--box" name="name" placeholder="Опишите все ваши пожелания к заказу"></textarea>
           </p>
           <small class="order-form__note"><sup>*</sup>Поля обязательны для заполнения</small>
           <button class="order-form__submit btn" type="submit">Отправить заказ</button>
