Исправил ширину у объектов каталога

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <li class="extra-nav__item"><a class="extra-nav__link" href="#">Новые поступления</a></li>
                 <li class="extra-nav__item"><a class="extra-nav__link" href="#">Распродажа</a></li>
               </ul>
-              <div class="delivery-info">Бесплатная доставка по России</div>
+              <div class="main-header__delivery-info">Бесплатная доставка по России</div>
             </div>
           </nav>
         </div>
