Переделал promo и best-seller для всех вьюпортов

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <h2 class="best-seller__title">Вязаные корзинки</h2>
           <b class="best-seller__state">Товар недели</b>
         </div>
-        <div class="best-seller__info">
+        <div class="best-seller__content">
           <p class="best-seller__description">
             Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.
           </p>
@@ -70,13 +70,13 @@
               <td class="best-seller__table-cell best-seller__table-cell--value">15 см</td>
             </tr>
           </table>
-        </div>
-        <div class="best-seller__image">
-          <img src="img/triple-set-mobile@1x.jpg" alt="Вязаные корзинки" width="260" height="315">
-        </div>
-        <div class="best-seller__buy">
-          <div class="best-seller__price">Цена: 990руб.</div>
-          <a class="best-seller__order btn" href="#">Заказать</a>
+          <div class="best-seller__image">
+            <img src="img/triple-set-mobile@1x.jpg" alt="Вязаные корзинки" width="260" height="315">
+          </div>
+          <div class="best-seller__buy">
+            <div class="best-seller__price">Цена: 990руб.</div>
+            <a class="best-seller__order btn" href="#">Заказать</a>
+          </div>
         </div>
       </div>
     </section>
