--- a/form.html
+++ b/form.html
@@ -10,36 +10,32 @@
   <body>
     <header class="main-header">
       <div class="main-header__top">
-        <div class="main-header__container">
+        <div class="main-header__container no-js">
           <a class="logo" href="index.html">
             <img class="logo__img" src="img/logo-mobile.svg" alt="Мишка" width="86" height="35">
           </a>
-          <nav class="main-menu main-menu--closed main-menu--nojs">
-            <button class="main-menu__toggle main-menu__toggle--opened" type="button">Открыть меню</button>
-            <div class="main-menu__container">
-              <ul class="main-menu__list main-menu__list--categories">
-                <li class="main-menu__item">
-                  <a class="main-menu__link main-menu__link--catalog" href="catalog.html"><span class="main-menu__align-center main-menu__align-center--catalog">Каталог товаров</span></a>
-                </li>
-                <li class="main-menu__item">
-                  <a class="main-menu__link main-menu__link--order" href="form.html"><span class="main-menu__align-center main-menu__align-center--order">Вязание на заказ</span></a>
-                </li>
-              </ul>
-              <ul class="main-menu__list main-menu__list--controls">
-                <li class="main-menu__item">
-                  <a class="main-menu__link main-menu__link--search" href="#"><span class="main-menu__align-center main-menu__align-center--search">Поиск по сайту</span></a>
-                </li>
-                <li class="main-menu__item">
-                  <a class="main-menu__link main-menu__link--cart" href="#"><span class="main-menu__align-center main-menu__align-center--cart">Корзина: <span>пока пуста</span></span></a>
-                </li>
-              </ul>
-              <ul class="extra-nav">
-                <li class="extra-nav__item"><a class="extra-nav__link" href="#">Новые поступления</a></li>
-                <li class="extra-nav__item"><a class="extra-nav__link" href="#">Распродажа</a></li>
-              </ul>
-              <div class="delivery-info">Бесплатная доставка по России</div>
-            </div>
-          </nav>
+          <button class="main-header__toggle main-header__toggle--opened" type="button">Открыть меню</button>
+          <ul class="main-nav">
+            <li class="main-nav__item">
+              <a class="main-nav__link main-nav__link--catalog" href="catalog.html"><span class="main-nav__align-center main-nav__align-center--catalog">Каталог товаров</span></a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link main-nav__link--order" href="#"><span class="main-nav__align-center main-nav__align-center--order">Вязание на заказ</span></a>
+            </li>
+          </ul>
+          <ul class="user-nav">
+            <li class="user-nav__item">
+              <a class="user-nav__link user-nav__link--search" href="#"><span class="user-nav__align-center user-nav__align-center--search">Поиск по сайту</span></a>
+            </li>
+            <li class="user-nav__item">
+              <a class="user-nav__link user-nav__link--cart" href="#"><span class="user-nav__align-center user-nav__align-center--cart">Корзина: <span>пока пуста</span></span></a>
+            </li>
+          </ul>
+          <ul class="extra-nav">
+            <li class="extra-nav__item"><a class="extra-nav__link" href="#">Новые поступления</a></li>
+            <li class="extra-nav__item"><a class="extra-nav__link" href="#">Распродажа</a></li>
+          </ul>
+          <div class="main-header__delivery-info">Бесплатная доставка по России</div>
         </div>
       </div>
       <h1 class="main-header__title">Вязание на заказ</h1>
@@ -122,9 +118,9 @@
     </div>
     <footer class="main-footer">
       <div class="main-footer__container">
-        <div class="main-footer__logo">
+        <a class="main-footer__logo" href="index.html">
           <img src="img/logo-mobile.svg" alt="Мишка" width="86" height="35">
-        </div>
+        </a>
         <div class="social-links">
           <a class="social-link social-link--insta" href="#">Мы в Инстаграмме</a>
           <a class="social-link social-link--fb" href="#">Мы в Фейсбуке</a>
