--- a/index.html
+++ b/index.html
@@ -113,27 +113,27 @@
     <section class="contacts">
       <div class="contacts__container">
         <h2 class="contacts__title">Контакты</h2>
-        <div class="contacts__item">
-          <span class="contacts__field">email:</span>
-          <a class="contacts__text" href="#">info@mimimishkashop.ru</a>
-        </div>
-        <div class="contacts__item">
-          <span class="contacts__field">адрес:</span>
-          <span class="contacts__text contacts__text--address">г. Санкт-Петербург,<br> ул. Большая Конюшенная,<br> д. 19/8, офис 101</span>
+        <div class="contacts__items">
+          <div class="contacts__item">
+            <span class="contacts__field">email:</span>
+            <a class="contacts__text" href="#">info@mimimishkashop.ru</a>
+          </div>
+          <div class="contacts__item">
+            <span class="contacts__field">адрес:</span>
+            <span class="contacts__text contacts__text--address">г. Санкт-Петербург,<br> ул. Большая Конюшенная,<br> д. 19/8, офис 101</span>
+          </div>
         </div>
       </div>
       <div class="map">
         <div class="map__inner"></div>
       </div>
-      <div class="contacts__container">
-        <a class="contacts__write btn" href="#">Напишите нам</a>
-      </div>
+      <a class="contacts__write btn" href="#">Напишите нам</a>
     </section>
     <footer class="main-footer">
       <div class="main-footer__container">
-        <div class="main-footer__logo">
+        <a class="main-footer__logo" href="#">
           <img src="img/logo-mobile.svg" alt="Мишка" width="86" height="35">
-        </div>
+        </a>
         <div class="social-links">
           <a class="social-link social-link--insta" href="#">Мы в Инстаграмме</a>
           <a class="social-link social-link--fb" href="#">Мы в Фейсбуке</a>
