Исправил ошибку в блоке Контакты

--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="main-header">
-      <div class="main-header__top">
+      <div class="main-header__top main-header__top--gray">
         <div class="main-header__container no-js">
           <a class="logo" href="index.html">
             <img class="logo__img" src="img/logo-mobile.svg" alt="Мишка" width="86" height="35">
