--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
         <div class="reviews__items">
           <blockquote class="reviews__text">
               Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
-            <cite class="reviews__author">Анастасия Красильникова <span class="reviews__author-contact">@misssssiskras</span></cite>
           </blockquote>
           <!-- Ещё слайды -->
         </div>
+        <div class="reviews__author">Анастасия Красильникова <span class="reviews__author-contact">@misssssiskras</span></div>
         <div class="reviews__btns">
           <button class="reviews__btn reviews__btn--prev" type="button"><!-- --></button>
           <button class="reviews__btn reviews__btn--next" type="button"><!-- --></button>
