Стилизовал checkbox и radio

--- a/form.html
+++ b/form.html
@@ -43,45 +43,45 @@
     <div class="order">
       <div class="order__container">
         <p class="order__description">
-          Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали
+          Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.
         </p>
         <form class="order-form" action="#" method="get">
           <fieldset class="order-form__section">
             <legend class="order-form__title">Тип</legend>
             <p class="order-form__line">
               <input class="order-form__radio" id="interior" type="radio" name="category" value="interior" checked>
-              <label class="order-form__label" for="interior">Аксессуар для интерьера</label>
+              <label class="order-form__label order-form__label--radio" for="interior">Аксессуар для интерьера</label>
             </p>
             <p class="order-form__line">
               <input class="order-form__radio" id="toys" type="radio" name="category" value="toys">
-              <label class="order-form__label" for="toys">Детская игрушка</label>
+              <label class="order-form__label order-form__label--radio" for="toys">Детская игрушка</label>
             </p>
           </fieldset>
           <fieldset class="order-form__section">
             <legend class="order-form__title">Цвет</legend>
             <p class="order-form__line">
               <input class="order-form__checkbox" id="white" type="checkbox" name="white" checked>
-              <label class="order-form__label" for="white">Белый</label>
+              <label class="order-form__label order-form__label--checkbox" for="white">Белый</label>
             </p>
             <p class="order-form__line">
               <input class="order-form__checkbox" id="gray" type="checkbox" name="gray" checked>
-              <label class="order-form__label" for="gray">Серый</label>
+              <label class="order-form__label order-form__label--checkbox" for="gray">Серый</label>
             </p>
             <p class="order-form__line">
               <input class="order-form__checkbox" id="tiffany" type="checkbox" name="tiffany">
-              <label class="order-form__label" for="tiffany">«Тиффани»</label>
+              <label class="order-form__label order-form__label--checkbox" for="tiffany">«Тиффани»</label>
             </p>
             <p class="order-form__line">
               <input class="order-form__checkbox" id="black" type="checkbox" name="black">
-              <label class="order-form__label" for="black">Черный</label>
+              <label class="order-form__label order-form__label--checkbox" for="black">Черный</label>
             </p>
             <p class="order-form__line">
               <input class="order-form__checkbox" id="pink" type="checkbox" name="pink">
-              <label class="order-form__label" for="pink">Розовый</label>
+              <label class="order-form__label order-form__label--checkbox" for="pink">Розовый</label>
             </p>
             <p class="order-form__line">
               <input class="order-form__checkbox" id="orange" type="checkbox" name="orange">
-              <label class="order-form__label" for="orange">Оранжевый</label>
+              <label class="order-form__label order-form__label--checkbox" for="orange">Оранжевый</label>
             </p>
           </fieldset>
           <fieldset class="order-form__section">
